11_Grammars/t59Parser/T59v4/gen/GramParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Gram.g4 by ANTLR 4.13.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.2")]
[System.CLSCompliant(false)]
public partial class GramParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		I22_invert=1, I24_correct_entry=2, I25_clear=3, I38_sin=4, I39_cos=5, 
		I30_tan=6, I40_indirect=7, I42_store=8, I43_recall=9, I44_sum=10, I61_goto=11, 
		I62_program_indirect=12, I63_exchange_indirect=13, I64_product_indirect=14, 
		I65_multiply=15, I66_pause=16, I67_x_equals_t=17, I67_x_equals_t_indextra=18, 
		I68_nop=19, I71_subroutine=20, I72_store_indirect=21, I73_recall_indirect=22, 
		I74_sum_indirect=23, I76_label=24, I77_x_greater_or_equal_than_t=25, I77_x_greater_or_equal_than_t_indextra=26, 
		I82_hir=27, I87_if_flag=28, I92_return=29, I97_dsz=30, D1=31, D2=32, A3=33, 
		A4=34, NUM=35, WS=36;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_number_statement = 2, RULE_mnemonic = 3, 
		RULE_atomic_statement = 4, RULE_d_statement = 5, RULE_i_statement = 6, 
		RULE_ad_statement = 7, RULE_ai_statement = 8, RULE_bd_statement = 9, RULE_bi_statement = 10, 
		RULE_doi_lai_statement = 11, RULE_t_statement = 12, RULE_td_statement = 13, 
		RULE_ti_statement = 14, RULE_tdd_statement = 15, RULE_tdi_statement = 16, 
		RULE_tid_statement = 17, RULE_tii_statement = 18, RULE_label_statement = 19, 
		RULE_inv_statement = 20;
	public static readonly string[] ruleNames = {
		"program", "statement", "number_statement", "mnemonic", "atomic_statement", 
		"d_statement", "i_statement", "ad_statement", "ai_statement", "bd_statement", 
		"bi_statement", "doi_lai_statement", "t_statement", "td_statement", "ti_statement", 
		"tdd_statement", "tdi_statement", "tid_statement", "tii_statement", "label_statement", 
		"inv_statement"
	};

	private static readonly string[] _LiteralNames = {
		null, "'INV'", "'CE'", "'CLR'", "'sin'", "'cos'", "'tan'", "'Ind'", "'STO'", 
		"'RCL'", "'SUM'", "'GTO'", "'PG*'", "'EX*'", "'PD*'", null, null, null, 
		"'EQ*'", "'Nop'", "'SBR'", "'ST*'", "'RC*'", "'SM*'", "'Lbl'", null, "'GE*'", 
		"'HIR'", "'IFF'", "'RTN'", "'Dsz'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "I22_invert", "I24_correct_entry", "I25_clear", "I38_sin", "I39_cos", 
		"I30_tan", "I40_indirect", "I42_store", "I43_recall", "I44_sum", "I61_goto", 
		"I62_program_indirect", "I63_exchange_indirect", "I64_product_indirect", 
		"I65_multiply", "I66_pause", "I67_x_equals_t", "I67_x_equals_t_indextra", 
		"I68_nop", "I71_subroutine", "I72_store_indirect", "I73_recall_indirect", 
		"I74_sum_indirect", "I76_label", "I77_x_greater_or_equal_than_t", "I77_x_greater_or_equal_than_t_indextra", 
		"I82_hir", "I87_if_flag", "I92_return", "I97_dsz", "D1", "D2", "A3", "A4", 
		"NUM", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Gram.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GramParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GramParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GramParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(GramParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 43;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			do {
				{
				{
				State = 42;
				statement();
				}
				}
				State = 45;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 68719476606L) != 0) );
			State = 47;
			Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public Number_statementContext number_statement() {
			return GetRuleContext<Number_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Atomic_statementContext atomic_statement() {
			return GetRuleContext<Atomic_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public D_statementContext d_statement() {
			return GetRuleContext<D_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public I_statementContext i_statement() {
			return GetRuleContext<I_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bd_statementContext bd_statement() {
			return GetRuleContext<Bd_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Bi_statementContext bi_statement() {
			return GetRuleContext<Bi_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public T_statementContext t_statement() {
			return GetRuleContext<T_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Label_statementContext label_statement() {
			return GetRuleContext<Label_statementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public Inv_statementContext inv_statement() {
			return GetRuleContext<Inv_statementContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 58;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,1,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 49;
				number_statement();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 50;
				atomic_statement();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 51;
				d_statement();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 52;
				i_statement();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 53;
				bd_statement();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 54;
				bi_statement();
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 55;
				t_statement();
				}
				break;
			case 8:
				EnterOuterAlt(_localctx, 8);
				{
				State = 56;
				label_statement();
				}
				break;
			case 9:
				EnterOuterAlt(_localctx, 9);
				{
				State = 57;
				inv_statement();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Number_statementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NUM() { return GetToken(GramParser.NUM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A3() { return GetToken(GramParser.A3, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode A4() { return GetToken(GramParser.A4, 0); }
		public Number_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_number_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterNumber_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitNumber_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitNumber_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Number_statementContext number_statement() {
		Number_statementContext _localctx = new Number_statementContext(Context, State);
		EnterRule(_localctx, 4, RULE_number_statement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 60;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 66571993088L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MnemonicContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I24_correct_entry() { return GetToken(GramParser.I24_correct_entry, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I25_clear() { return GetToken(GramParser.I25_clear, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I42_store() { return GetToken(GramParser.I42_store, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I43_recall() { return GetToken(GramParser.I43_recall, 0); }
		public MnemonicContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_mnemonic; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterMnemonic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitMnemonic(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMnemonic(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MnemonicContext mnemonic() {
		MnemonicContext _localctx = new MnemonicContext(Context, State);
		EnterRule(_localctx, 6, RULE_mnemonic);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 62;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 780L) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class Atomic_statementContext : ParserRuleContext {
		public IToken inv;
		public IToken sta;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I38_sin() { return GetToken(GramParser.I38_sin, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I39_cos() { return GetToken(GramParser.I39_cos, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I30_tan() { return GetToken(GramParser.I30_tan, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I71_subroutine() { return GetToken(GramParser.I71_subroutine, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I25_clear() { return GetToken(GramParser.I25_clear, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I24_correct_entry() { return GetToken(GramParser.I24_correct_entry, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I66_pause() { return GetToken(GramParser.I66_pause, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I68_nop() { return GetToken(GramParser.I68_nop, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I65_multiply() { return GetToken(GramParser.I65_multiply, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I92_return() { return GetToken(GramParser.I92_return, 0); }
		public Atomic_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_atomic_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterAtomic_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitAtomic_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAtomic_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public Atomic_statementContext atomic_statement() {
		Atomic_statementContext _localctx = new Atomic_statementContext(Context, State);
		EnterRule(_localctx, 8, RULE_atomic_statement);
		int _la;
		try {
			State = 69;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I22_invert:
			case I38_sin:
			case I39_cos:
			case I30_tan:
			case I71_subroutine:
				EnterOuterAlt(_localctx, 1);
				{
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I22_invert) {
					{
					State = 64;
					_localctx.inv = Match(I22_invert);
					}
				}

				State = 67;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 1048688L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case I24_correct_entry:
			case I25_clear:
			case I65_multiply:
			case I66_pause:
			case I68_nop:
			case I92_return:
				EnterOuterAlt(_localctx, 2);
				{
				State = 68;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 537493516L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class D_statementContext : ParserRuleContext {
		public IToken sta;
		public IToken t;
		public IToken inv;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I42_store() { return GetToken(GramParser.I42_store, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I43_recall() { return GetToken(GramParser.I43_recall, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I82_hir() { return GetToken(GramParser.I82_hir, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D1() { return GetToken(GramParser.D1, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode D2() { return GetToken(GramParser.D2, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I44_sum() { return GetToken(GramParser.I44_sum, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode I22_invert() { return GetToken(GramParser.I22_invert, 0); }
		public D_statementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_d_statement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.EnterD_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGramListener typedListener = listener as IGramListener;
			if (typedListener != null) typedListener.ExitD_statement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGramVisitor<TResult> typedVisitor = visitor as IGramVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitD_statement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public D_statementContext d_statement() {
		D_statementContext _localctx = new D_statementContext(Context, State);
		EnterRule(_localctx, 10, RULE_d_statement);
		int _la;
		try {
			State = 78;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case I42_store:
			case I43_recall:
			case I82_hir:
				EnterOuterAlt(_localctx, 1);
				{
				State = 71;
				_localctx.sta = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 134218496L) != 0)) ) {
					_localctx.sta = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 72;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			case I22_invert:
			case I44_sum:
				EnterOuterAlt(_localctx, 2);
				{
				State = 74;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==I22_invert) {
					{
					State = 73;
					_localctx.inv = Match(I22_invert);
					}
				}

				State = 76;
				_localctx.sta = Match(I44_sum);
				State = 77;
				_localctx.t = TokenStream.LT(1);
				_la = TokenStream.LA(1);
				if ( !(_la==D1 || _la==D2) ) {
					_localctx.t = ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
